@@ -1,2 +1,1 @@
-edge /usr/sbin
 supernode /usr/sbin
