@@ -1,4 +1,0 @@
-usr/sbin
-usr/share/doc/n2n
-usr/share/man/man1
-usr/share/man/man8
