@@ -1,9 +1,5 @@
 #!/usr/bin/make -f
   
-#DEB_MAKE_INSTALL_TARGET = install prefix=$(CURDIR)/debian/n2n/usr
-
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/dpatch.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
-# Add here any variable or target overrides you need.
